@@ -75,7 +75,7 @@
       </imageobject>
       <caption>
 	<para>
-	  The wave editor's toolbar screenshot
+	  The wave editor&apos;s toolbar screenshot
 	</para>
       </caption>
     </mediaobject>
